--- a/src/stylesheets/partials/_flex.scss
+++ b/src/stylesheets/partials/_flex.scss
@@ -3,8 +3,9 @@
 // --------------------------------------------------
 
 .flex-row {
-  flex: 1 1 auto; // Default for nested row
+  flex-grow: 1; // Do not set flex-basis as it conflicts with grid classes
   display: flex;
+  min-width: 0; // Fix truncation
 
   &.center {
     align-items: center;
